--- a/app/views/docs/edit.html.haml
+++ b/app/views/docs/edit.html.haml
@@ -1,2 +1,6 @@
-= render 'form'
-= link_to "cancel", doc_path
+.wrapper_with_padding
+	%h1 Fix Doc!
+
+	= render 'form'
+
+	= link_to "Cancel", doc_path
