--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,2 +1,22 @@
-<h1>Suellen#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+#banner
+	.banner_content
+		%h1 File Cabinet
+		%p You Life Work. Organized, always
+		%button= link_to "Enter", new_user_registration_path
+
+#callouts
+	.callout_inner
+		.wrapper
+			.callout
+				%h2 Organize
+				%p jfh jhd fjdh jfhd jh jhd jfhd jfh jdh jhf hfj hdf jdfh j 
+				kf jf jaf kdf kd jkdh fjh jkh fdjk jd fjdh fjdh f
+				kjfdkj fkjd kjfjdj fdk fkdj fjd kjdfh jhf jdf jd f
+				f kdk fjkd fjkd njk
+
+#bottom_cta
+	.wrapper
+		%h2 Go Ahead!
+		%br
+		%button= link_to "join Now", new_user_registration_path						
+
