--- a/app/views/docs/index.html.haml
+++ b/app/views/docs/index.html.haml
@@ -1,6 +1,7 @@
 - @docs.each do |doc|
+	
 	%h2= link_to doc.title, doc 
 	%p= time_ago_in_words(doc.created_at)
 	%p= truncate(doc.content, length:50)
 
-	= link_to "Create Doc", new_doc_path
+= link_to "New", new_doc_path	
