--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -1,7 +1,7 @@
 $dark_gray: #2B2E2E;
 $light_gray: #C0C1C1;
 $green: #529ECC;
-
+$suellenwhite: #ffffff; 
 @mixin bold_font {
   font-family: 'Dosis', sans-serif;
 	font-weight: bold;
@@ -59,7 +59,7 @@ button, .button {
 }
 
 a {
-	color: $green;
+	color: $suellenwhite;
 	text-decoration: none;
 	&:hover {
 		color: $dark_gray;
